added favicon and added README

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Weatherly",
-  "name": "Create React App Sample",
+  "name": "Weatherly",
   "icons": [
     {
       "src": "favicon.ico",
